# FVW-CPP

./: .gitignore  CMakeLists.txt  README.md  compute_induced_velocity.cpp  config.json  config_ntnu.json  main.cpp  postprocess_grid.cpp  postprocess_probes.cpp  submit_job.slurm
data/NREL_5MW/: airfoil_list.txt  blade_geometry.csv  turbine_params.json
data/NTNU/: airfoil_list.txt  blade_geometry.csv  turbine_params.json
docs/: README.md  analysis_tools.md  configuration.md  developer_guide.md  postprocessing_tutorial.md  python_api.md  research_plan.md  user_manual.md
include/: airfoil.h  bem.h  config.h  geometry.h  json_utils.h  performance.h  position.h  postprocess.h  simulation_runner.h  utils.h  velocity.h  wake.h
include/core/: geometry.h  position.h  types.h  utils.h  velocity.h  wake.h
include/io/: cli_utils.h  config.h  logger.h  postprocess.h
include/models/: airfoil.h  bem.h  performance.h
include/simulation/: simulation_runner.h
include/validation/: validate.h  validate_geometry.h  validate_position.h
python/: example.py  inspect_h5.py  process_aero.py  process_spanwise.py  process_wake_viz.py  process_zx_projection.py
python/fvw/: calc.py  io.py
src/: airfoil.cpp  bem.cpp  geometry.cpp  main.cpp  performance.cpp  position.cpp  postprocess.cpp  utils.cpp  velocity.cpp  wake.cpp
src/core/: geometry.cpp  position.cpp  utils.cpp  velocity.cpp  wake.cpp
src/io/: config.cpp  logger.cpp  postprocess.cpp
src/models/: airfoil.cpp  bem.cpp  performance.cpp
src/simulation/: simulation_runner.cpp
src/validation/: README.md  validate.cpp  validate_geometry.cpp  validate_position.cpp
tools/: assist_ntnu_migration.py  compute_downstream.cpp  postprocess_grid.cpp  postprocess_probes.cpp  postprocess_probes_manual.cpp  postprocess_sampling.cpp
tools/python/: README.md  compare_fvw_alm.py
tools/python/aerodynamics/compare_alm/: compare.py  diagnose_chain.py
tools/python/aerodynamics/single_case/: analyze_case.py
tools/python/downstream_velocity/: analyze_instability.py  calculate_metrics.py  calculate_rews.py  calculate_rotor_averaged_metrics.py  compare_alm.py  compare_cutoff_profiles.py  extract_profiles.py
tools/python/studies/cutoff/: compare.py  generate_cases.py  postprocess_cutoff.py  visualize.py  wake_compare_cutoff.py
tools/python/studies/time_scheme/: compare_euler_pc.py
tools/python/wake_visualization/: analyze_les_wake.py  visualize_alm_wake.py  visualize_fvw_wake.py
tools/python/wake_vorticity/: average_circulation_xy_plane_compare_ppd.py  average_lastrev_omega_compare.py  average_velocitycurl_bladefixed_plane.py  average_velocitycurl_xy_plane.py  average_velocitycurl_xz_plane.py  compare_line_type_contributions.py  compare_projection_resolutions.py  extract_circulation_xy_plane.py  extract_filament_segments.py  plot_vorticity_slices_from_vti.py  project_segments_to_grid_3d.py
tutorials/NREL/: config.json  sampling.json
tutorials/NTNU/: config.json  sampling.json
validation/include/: validate_geometry.h  validate_position.h
validation/src/: validate.cpp  validate_geometry.cpp  validate_position.cpp
